<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.neighbour_list.DetailsActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline_33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".33" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".66" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".95" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineV_05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".05" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineV_95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".95" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineV_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".10" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineV_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".20" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/guideline_33"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@color/white"
        app:srcCompat="?attr/actionModeCloseDrawable"
        app:layout_constraintStart_toStartOf="@id/guidelineV_05"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/mainName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        style="@style/Name"
        android:text="Name"
        app:layout_constraintBottom_toTopOf="@+id/guideline_33"
        app:layout_constraintStart_toStartOf="@+id/guidelineV_05" />

    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        app:layout_constraintTop_toTopOf="@id/guideline_33"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:id="@+id/firstView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/myborder"
        app:layout_constraintBottom_toTopOf="@id/guideline_66"
        app:layout_constraintEnd_toEndOf="@id/guidelineV_95"
        app:layout_constraintStart_toStartOf="@id/guidelineV_05"
        app:layout_constraintTop_toTopOf="@id/guideline_33" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Title"
        app:layout_constraintStart_toStartOf="@id/guidelineV_10"
        app:layout_constraintTop_toTopOf="@id/firstView"
        android:layout_marginTop="20dp"
        android:text="Name"/>

    <ImageView
        android:id="@+id/img_localisation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_location_on_24"
        app:layout_constraintStart_toStartOf="@id/guidelineV_10"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/txt_localisation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Localisation"
        app:layout_constraintStart_toStartOf="@id/guidelineV_20"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:layout_marginTop="30dp" />

    <ImageView
        android:id="@+id/img_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_phone_24"
        app:layout_constraintStart_toStartOf="@id/guidelineV_10"
        app:layout_constraintTop_toBottomOf="@id/img_localisation"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/txt_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Phone"
        app:layout_constraintStart_toStartOf="@id/guidelineV_20"
        app:layout_constraintTop_toBottomOf="@id/txt_localisation"
        android:layout_marginTop="25dp" />


    <View
        android:id="@+id/view_bottom"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineV_95"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/guideline_66"
        app:layout_constraintBottom_toTopOf="@id/guideline_95"
        app:layout_constraintStart_toStartOf="@id/guidelineV_05"
        android:layout_marginTop="20dp"
        android:background="@drawable/myborder" />

    <TextView
        android:id="@+id/txt_titleAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="A propos de moi"
        style="@style/Title"
        app:layout_constraintStart_toStartOf="@id/guidelineV_10"
        app:layout_constraintTop_toTopOf="@id/view_bottom"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/txt_About"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:text="About Me"
        app:layout_constraintStart_toStartOf="@id/guidelineV_10"
        app:layout_constraintTop_toTopOf="@id/txt_titleAbout"
        android:layout_marginTop="45dp" />

    <View
        android:id="@+id/view_favorite"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineV_95"
        app:layout_constraintBottom_toTopOf="@id/name"
        android:layout_marginBottom="10dp"
        android:background="@drawable/myfavorite"/>

    <ImageView
        android:id="@+id/img_star"
        android:layout_width="25dp"
        android:layout_height="25dp"
        app:srcCompat="@drawable/ic_star_white_24dp"
        app:layout_constraintTop_toTopOf="@id/view_favorite"
        app:layout_constraintLeft_toLeftOf="@id/view_favorite"
        app:layout_constraintBottom_toBottomOf="@id/view_favorite"
        app:layout_constraintRight_toRightOf="@id/view_favorite"/>


</android.support.constraint.ConstraintLayout>